--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+   
+    <script src="js/index.js" defer></script>
 
     <title>Previsão do tempo</title>
 </head>
@@ -36,7 +37,7 @@
             <h2>
                 <i class="fa-solid fa-location"></i>
                 <span id="city">Fortaleza</span>
-                <img src="https://countryflagsapi.com/png/br" alt="badendeira do país" id="country">
+                <img src="" alt="badendeira do país" id="country">
             </h2>
             <p id="temperature"><span>38</span> &deg;C</p>
 
