--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
 
         </div>
 
-        <div id="weather-data">
+        <div id="weather-data" class="hide">
 
             <h2>
-                <i class="fa-solid fa-location"></i>
-                <span id="city">Fortaleza</span>
-                <img src="" alt="badendeira do país" id="country">
+                <i class="fa-solid fa-location-dot"></i>
+                <span id="city"></span>
+               
             </h2>
             <p id="temperature"><span>38</span> &deg;C</p>
 
             <div class="description-container">
                 <p id="description">nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" alt="" id="weather-icon">
+                <img src="" alt="" id="weather-icon">
             </div>
 
             <div id="details-container">
                 <p id="umidity">
                     <i class="fa-solid fa-droplet"></i>
-                    <span>48%</span>
+                    <span></span>
                 </p>
                 <p id="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>3km/h</span>
+                    <span></span>
                 </p>
 
             </div>
